# Licenta_Smart_Car_Security_System

./: README.md  sdkconfig
components/: in caz ca nu merge nik.html  index.html  index2.html
components/ASW/Ambient_Light/: ambient_light.c
components/ASW/Climate_Control_System/: climate_control_system.c
components/ASW/Headlights/: headlights.c
components/ASW/Horn/: horn.c
components/ASW/Locking_System/: locking_system.c
components/ASW/Security/: security.c
components/ASW/Trunk/: trunk.c
components/BSW/HAL/Buzzer/: buzzer.c
components/BSW/HAL/Com/: com.c
components/BSW/HAL/DC_Motor/: dc_motor.c
components/BSW/HAL/Photo_Resistor/: photo_resistor.c
components/BSW/HAL/Proximity_Sensor/: proximity_sensor.c
components/BSW/HAL/RFID/: rc522.c
components/BSW/HAL/Servo_Motor/: servo_motor.c
components/BSW/HAL/Temp_Sensor/: temp_sensor.c
components/BSW/MCAL/ADC/: adc.c
components/BSW/MCAL/GPIO/: gpio.c
components/BSW/MCAL/PWM/: pwm.c
components/BSW/MCAL/WIFI/: wifi.c
components/RTE/: rte.c
components/SRVL/SCHEDULER/: scheduler.c
components/ViTAL/: index.html  index3.html
components/ViTAL/ASW/Ambient_Light/: ambient_light.c
components/ViTAL/ASW/Headlights/: headlights.c
components/ViTAL/ASW/Horn/: horn.c
components/ViTAL/ASW/Locking_System/: locking_system.c
components/ViTAL/ASW/Security/: security.c
components/ViTAL/SRVL/SCHEDULER/: scheduler.c
components/ViTAL/include/RTE/: rte.h
components/include/ASW/Ambient_Light/: ambient_light.h
components/include/ASW/Climate_Control_System/: climate_control_system.h
components/include/ASW/Horn/: horn.h
components/include/RTE/: rte.h
main/: CMakeLists.txt  main.c
(+25 files in other folders)
